--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "eslint-config-airbnb": "*",
+    "eslint-config-prettier": "^6.1.0",
     "eslint-import-resolver-webpack": "*",
     "eslint-plugin-import": "*",
     "eslint-plugin-jsx-a11y": "*",
