--- a/package.json
+++ b/package.json
@@ -3,23 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.0",
-    "bootstrap": "^4.3.1",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
     "eslint-config-airbnb": "*",
-    "eslint-config-prettier": "^6.1.0",
-    "eslint-import-resolver-webpack": "*",
-    "eslint-plugin-import": "*",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-import-resolver-webpack": "^0.12.1",
+    "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-jsx-a11y": "*",
-    "eslint-plugin-react": "*",
-    "node-sass": "^4.12.0",
+    "eslint-plugin-react": "^7.18.0",
+    "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-icons": "^3.7.0",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-icons": "^3.8.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1",
-    "yarn": "^1.17.3"
+    "yarn": "^1.21.1"
   },
   "scripts": {
     "start": "react-scripts start",
