--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1",
+    "serialize-javascript": "2.1.1",
     "yarn": "^1.21.1"
   },
   "scripts": {
